# TFG

./: .flake8  .gitignore  README.md  enviroment.yml  flake.nix  hp_tuning_optuna.db  interactive_slurm.sh  justfile  launch_server_process.sh  optuna_queries.sql  pyproject.toml  shell.nix  slurm_final.out
.github/workflows/: lint_and_unittest.yml  run-integration-test-conda.yaml  run-integration-test.yml  run-integration-tests.yml  run-unit-test.yml  run_notebooks.yml
dissertation/: bibliografia.tex  custom_commands.tex  dissertation.tex  informatica.tex  justfile  matematicas.tex  references.bib
profiling_saves/: Profiling results.md  second_profile.txt  second_profile_filtered.txt
src/: Benchmarking notebook.ipynb  CACD Notebook.ipynb  FG-Net Notebook.ipynb  FG-Net.py  LFW Notebook.ipynb  LFW Notebook.py  MNIST Adam Bielski.py  MNIST Notebook.ipynb  MNIST.py  Notebook.ipynb
src/Saved Notebooks/: MNIST 25-09-2022.ipynb  MNIST with logging 25-09-2022.ipynb  README.md
src/adambielski_lib/: datasets.py  losses.py  networks.py  trainer.py  utils.py
src/benchmarks/: Benchmarking notebook.ipynb  base.py  benchmark_loss_functions.py  benchmark_metrics.py
src/integration_tests/: lfw_dataset.py
src/lib/: board.py  core.py  custom_loss.py  data_augmentation.py  datasets.py  embedding_to_classifier.py  filesystem.py  hyperparameter_tuning.py  loss_functions.py  loss_functions_blog.py  metrics.py  models.py  sampler.py  split_dataset.py  train_loggers.py  trainers.py  utils.py  visualizations.py
src/profiling/: README.md  first_profile.stat  first_profile.txt  first_profile_filtered.txt  second_profile.stat  third_profile.stat  third_profile.txt  third_profile_filtered.txt
src/test/: data_augmentation.py  loss_functions.py  metrics.py  models.py  sampler.py  split_dataset.py
thesis/: README.md  flake.nix  justfile  libro.tex  references.bib  shell.nix
thesis/capitulos/: capitulo01.tex
thesis/paquetes/: comandos-entornos.tex
thesis/preliminares/: introduccion.tex  portada.tex  summary.tex  tablacontenidos.tex  titulo.tex
thesis/scopus_diagrams/: Scopus Results Viewer.ipynb  (+3 more)
(+18 files in other folders)
