[tool.poetry]
name = "tfg"
version = "0.1.0"
# TODO -- fill this description
description = ""
authors = ["Sergio <sergiquijano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
