[tool.poetry]
name = "tfg"
version = "0.1.0"
# TODO -- fill this description
description = ""
authors = ["Sergio <sergiquijano@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
scipy = "^1.8.1"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
tensorboard = "^2.9.1"
tqdm = "^4.64.0"
jupyterlab = "^3.4.4"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
